--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -302,10 +302,9 @@
                                     {% set _employerproviderManual = myData.manuals[myData.manual].id %}
                                 {% endif %}
 
-                                <p class="govuk-body">The 2018 to 2019 rules apply to apprenticeships starting on or after 1 August 2018.</p>
+                                <p class="govuk-body">The 2018 to 2019 rules apply to apprenticeships starting on or after 1 August 2018. You can view the apprenticeship funding rules for:</p>
 
-                                <p class="govuk-body">You can view the apprenticeship funding rules for:</p>
-                                <ul class="govuk-list " >
+                                <ul class="govuk-list  govuk-list--bullet" >
                                     <li><a href="manual-home?manual={{_employerManual}}">employers</a></li>
                                     <li><a href="manual-home?manual={{_employerproviderManual}}">employer-providers</a></li>
                                     <li><a href="manual-home?manual={{_providerManual}}">training providers</a></li>
@@ -315,7 +314,7 @@
                                     Other information
                                 </h3>
 
-                                <p>You can view:</p>
+                                <p>You can also view:</p>
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
                                         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733039/1819_Funding_Rules_Summary_of_Changes_1.0.pdf">
@@ -330,21 +329,6 @@
                                 </ul>
 
                                 <hr>
-
-                                <!-- <details class="govuk-details">
-                                    <summary class="govuk-details__summary">
-                                        <span class="govuk-details__summary-text">
-                                                Download the funding and performance management rules in a different format
-                                        </span>
-                                    </summary>
-                                    <div class="govuk-details__text">
-                                        <p>The rules are available as PDF files. Email xxx to ask for a different format.</p>
-                                        <p><a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/733050/1819_Provider_Rules_v1.0.pdf">Apprenticeship funding rules for training providers (PDF, 2.08MB)</a></p>
-                                        <p><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733046/Apps_1819_PM_rules_.pdf">Apprenticeship performance-management rules for training providers (PDF, 633KB)</a></p>
-                                        <p><a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/733034/1819_Employer_Rules_v1.0.pdf">Apprenticeship funding rules for employers (PDF, 1.33MB)</a></p>
-                                        <p><a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/733056/1819_Employer-Provider_Rules_v1.0.pdf">Apprenticeship funding rules for employer-providers (PDF, 2.56MB)</a></p>
-                                    </div>
-                                </details> -->
 
                                 <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2017">
                                     2017 to 2018 rules
@@ -368,59 +352,72 @@
                                             apprenticeship funding rules for training providers (PDF, 640KB)
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611724/Subcontracting_addendum__003_.pdf">
-                                            apprenticeship funding and performance management rules - addendum 1 (PDF, 640KB)
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">
-                                            updates to the apprenticeship funding rules 2017 to 2018 (PDF, 640KB)
-                                        </a>
-                                    </li>
                                 </ul>
 
-                                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
-                                    2016 to 2017 rules
-                                </h2>
+                                <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="other">
+                                    Other information
+                                </h3>
 
-                                <p class="govuk-body">The 2016 to 2017 rules apply to apprenticeships that started between 1 August 2016 and 31 July 2017:</p>
-
+                                <p>You can also view:</p>
                                 <ul class="govuk-list govuk-list--bullet">
                                         <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604976/SFA_common_and_performance_management_funding_rules_2016_to_2017_V3.pdf">
-                                                Skills Funding Agency: common and performance-management funding rules 2016 to 2017 (PDF, 640KB)
+                                            <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">
+                                                updates to the apprenticeship funding rules 2017 to 2018 (PDF, 640KB)
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611725/Apprenticeships_common_funding_and_pm_rules_2016_to_2017_V5.pdf">
-                                                Apprenticeships: common funding and performance-management rules 2016 to 2017 (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/595360/Apprenticeship_Framework_Funding_Rules_2016_to_2017_V4.pdf">
-                                                Apprenticeship frameworks funding and AGE performance-management rules 2016 to 2017 (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604972/Apprenticeship_standards_funding_rules_2016_to_2017_v2_FINAL.pdf">
-                                                Apprenticeship standards funding rules 2016 to 2017 (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604968/HEI_funding_rules.pdf">
-                                                Apprenticeship funding rules for higher education institutions (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/545722/Adult_education_budget_funding_and_performance_management_rules_2016_to_2017_V3.pdf">
-                                                Adult education budget funding and performance-management rules 2016 to 2017 (PDF, 640KB)
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611724/Subcontracting_addendum__003_.pdf">
+                                                apprenticeship funding and performance management rules - addendum 1 (PDF, 640KB)
                                             </a>
                                         </li>
                                     </ul>
 
+                                    <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
+                                            2016 to 2017 rules
+                                        </h2>
+                                        <p class="govuk-body">For apprenticeships that started between 1 August 2016 and 31 July 2017, you must follow the <a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">2016 to 2017 funding rules</a>.</p>
+
+                                <!-- <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
+                                    2016 to 2017 rules
+                                </h2>
+
+                                <p class="govuk-body">Rules for 2016 to 2017 apply to apprenticeships that started between 1 August 2016 and 31 July 2017:</p>
+
+                                <ul class="govuk-list govuk-list--bullet">
+                                        <li>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611725/Apprenticeships_common_funding_and_pm_rules_2016_to_2017_V5.pdf">
+                                                apprenticeships: common funding and performance-management rules (PDF, 640KB)
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/595360/Apprenticeship_Framework_Funding_Rules_2016_to_2017_V4.pdf">
+                                                apprenticeship frameworks funding and AGE performance-management rules (PDF, 640KB)
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604968/HEI_funding_rules.pdf">
+                                                apprenticeship funding rules for higher education institutions (PDF, 640KB)
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604972/Apprenticeship_standards_funding_rules_2016_to_2017_v2_FINAL.pdf">
+                                                apprenticeship standards funding rules (PDF, 640KB)
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/545722/Adult_education_budget_funding_and_performance_management_rules_2016_to_2017_V3.pdf">
+                                                adult education budget funding and performance-management rules (PDF, 640KB)
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604976/SFA_common_and_performance_management_funding_rules_2016_to_2017_V3.pdf">
+                                                Skills Funding Agency: common and performance-management funding rules (PDF, 640KB)
+                                            </a>
+                                        </li>
+                                    </ul> -->
+
                                 <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="previous">Previous rules</h2>
-                                <p class="govuk-body">For apprenticeships that started before 1 August 2016, <a href="https://www.gov.uk/guidance/sfa-funding-rules">view previous funding rules</a>.</p>
+                                <p class="govuk-body"><a href="https://www.gov.uk/guidance/sfa-funding-rules">View previous funding rules</a> for apprenticeships that started before 1 August 2016.</p>
 
                                 <h2 class="gem-d-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
                                         Help and support
