--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -246,9 +246,9 @@
                             data-module="track-click">
                             <h2 class="gem-c-contents-list__title">Contents</h2>
                             <ol class="gem-c-contents-list__list">
-                                    <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
+                                    <!-- <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
                                             <a class="gem-c-contents-list__link " href="#feedback">Feedback</a>
-                                        </li>
+                                        </li> -->
                                 <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
                                     <a class="gem-c-contents-list__link " href="#latest">The latest rules (2018 to 2019)</a>
                                 </li>
@@ -272,12 +272,10 @@
                                 <!-- <div class="call-to-action">
                                     <p class="govuk-body">There are different funding rules for different apprenticeship start dates. You must follow the funding rules that apply to each apprentice.</p>
                                 </div> -->
-                                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="feedback">
+                                <!-- <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="feedback">
                                     Feedback
-                                </h2>
-                                <!-- <div class="call-to-action"> -->
-                                    <p><a href="https://www.smartsurvey.co.uk/s/fundingrules/">Complete our survey</a> to help us make the funding rules clearer.</p>
-                                <!-- </div> -->
+                                </h2> -->
+                               
 
                                 <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="latest">
                                     The latest rules (2018 to 2019)
@@ -328,7 +326,10 @@
                                     </li>
                                 </ul>
 
-                                <hr>
+                                <!-- <hr> -->
+                                <div class="call-to-action">
+                                        <p><a href="https://www.smartsurvey.co.uk/s/fundingrules/">Complete our survey</a> to help us make the funding rules clearer.</p>
+                                    </div>
 
                                 <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2017">
                                     2017 to 2018 rules
