--- a/app/views/8-0/rules-list.html
+++ b/app/views/8-0/rules-list.html
@@ -223,9 +223,6 @@
           <p class="gem-c-lead-paragraph ">
               These rules are for apprenticeships that started between 1 August {{_yearRangeStart}} and 31 July {{_yearRangeEnd}}.
           </p>
-          <p class="gem-c-lead-paragraph ">
-            You can <a href="rules-years">view rules that apply to other apprenticeship start dates</a>.
-          </p>
         </div>
       </div>
 
@@ -397,9 +394,16 @@
                       </div>
                     </section>
 
+                    <div class="call-to-action">
+                        <p>You can <a href="rules-years">view rules that apply to other apprenticeship start dates</a>.</p>
+                    </div>
+
                 <h2 class="gem-d-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
                     Help and support
                 </h2>
+
+              
+
                 <h3 class="gem-d-heading  gem-c-heading--mobile-top-margin  " >
                     Training providers
                 </h3>
@@ -416,7 +420,9 @@
                 </h3>
                 <p>For help and support, phone us on 0800 015 0600. </p>
                 
-
+                <div class="call-to-action">
+                    <p><a href="https://www.smartsurvey.co.uk/s/fundingrules/">Complete our survey</a> to help us make the funding rules clearer.</p>
+                </div>
 
 
 
