--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -309,7 +309,7 @@
                                 </ul>
 
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="other">
-                                    Other information
+                                    Other documents
                                 </h3>
 
                                 <p>You can also view:</p>
@@ -335,28 +335,28 @@
                                     2017 to 2018 rules
                                 </h2>
                                 
-                                <p class="govuk-body">The 2017 to 2018 rules apply to apprenticeships that started between 1 August 2017 and 31 July 2018:</p>
+                                <p class="govuk-body">The 2017 to 2018 rules apply to apprenticeships that started between 1 August 2017 and 31 July 2018. You can view the apprenticeship funding rules for:</p>
 
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706505/Employer_rules_v3.pdf">
-                                            apprenticeship funding rules for employers (PDF, 640KB)
+                                            employers (PDF, 640KB)
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706506/Employer_provider_v3.pdf">
-                                            apprenticeship funding rules for employer-providers (PDF, 640KB)
+                                            employer-providers (PDF, 640KB)
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706507/Provider_v6.pdf">
-                                            apprenticeship funding rules for training providers (PDF, 640KB)
+                                            training providers (PDF, 640KB)
                                         </a>
                                     </li>
                                 </ul>
 
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="other">
-                                    Other information
+                                    Other documents
                                 </h3>
 
                                 <p>You can also view:</p>
@@ -376,7 +376,8 @@
                                     <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
                                             2016 to 2017 rules
                                         </h2>
-                                        <p class="govuk-body">For apprenticeships that started between 1 August 2016 and 31 July 2017, you must follow the <a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">2016 to 2017 funding rules</a>.</p>
+                                        <p class="govuk-body"><a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">View the 2016 to 2017 funding rules</a> for apprenticeships that started between 1 August 2016 and 31 July 2017.
+                                        </p>
 
                                 <!-- <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
                                     2016 to 2017 rules
