--- a/app/views/8-0/manual-updates.html
+++ b/app/views/8-0/manual-updates.html
@@ -35,97 +35,29 @@ GOV.UK Manual
                 </div>
 
                 <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
-                    <p class="section-title govuk-!-font-weight-regular">2018</p>
+                    <p class="section-title govuk-!-font-weight-regular">2019</p>
                     <div class="collapsible-subsections">
                         <div class="gem-c-govspeak govuk-govspeak ">
                             
-                            <!-- 10 December 2018
-                            August 2018 to July 2019 (version 2) -->
                             <h2>
-                                10 December 2018
+                                15 March 2019
                             </h2>
-                            <!-- <p class="govuk-!-font-size-24">August 2018 to July 2019</p> -->
-                            <!-- <br> -->
                             <dl class="updates-list">
                                 {% for section in _thisManual.sections %}
-                                    {% if loop.index % 2 == 0 %}
-                                        {% set _titleRendered = false %}
-                                        {% for subsection in section.subsections %}
-                                            {% set _subTitleRendered = false %}
-                                            {% for update in subsection.updates %}
-                                                {% set _updateIndex = loop.index %}
-                                                {% set _updateLast = loop.last %}
-                                                <dt>
-                                                    
-                                                    <!-- Section title -->
-                                                    {% if _titleRendered == false %}
-                                                        {% set _titleRendered = true %}
-                                                        <br>
-                                                        <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{section.title}}{% if section.range %} ({{section.range|safe}}){% endif %}</a>
-                                                        <br><br>
-                                                    {% endif %}
-
-                                                    <!-- Sub section title -->
-                                                    {% if _subTitleRendered == false and subsection.type != "main" %}
-                                                        {% set _subTitleRendered = true %}
-                                                        <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}#{{subsection.id}}" class="govuk-link govuk-link--no-visited-state">
-                                                        <span>{{subsection.title}}</span></a>
-                                                        <br><br>
-                                                    {% endif %}
-
-                                                </dt>
-                                                <dd id="{{update.rule}}">
-                                                    
-                                                        {% if update.rule %}<span class="govuk-!-font-weight-bold">{{update.rule|safe}}</span> - {% endif %}
-                                                        {{update.content|safe}}
-
-                                                </dd>
-                                            {% endfor %}
-                                        {% endfor %}
-                                    {% endif %}
+                                    <dt>
+                                        <!-- Section title -->
+                                        <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}" class="govuk-link govuk-link--no-visited-state ">{{section.title}}{% if section.range %} ({{section.range|safe}}){% endif %}</a>
+                                    </dt>
+                                    <dd>
+                                        {% if section.changenote %}
+                                            {{section.changenote|safe}}
+                                        {% else %}
+                                            New section added.
+                                        {% endif %}
+                                    </dd>
                                 {% endfor %}
                             </dl>
-
-                            <h2>
-                                31 July 2018
-                            </h2>
-                            <!-- <p class="govuk-!-font-size-24">August 2018 to July 2019 (version 1)</p>
-                            <br> -->
-                            <dl class="updates-list">
-                                {% for section in _thisManual.sections %}
-                                    {% if loop.index % 2 != 0 %}
-                                        {% set _titleRendered = false %}
-                                        {% for subsection in section.subsections %}
-                                            {% for update in subsection.updates %}
-                                                {% set _updateIndex = loop.index %}
-                                                {% set _updateLast = loop.last %}
-                                                <dt>
-                                                    
-                                                    <!-- Section title -->
-                                                    {% if _titleRendered == false %}
-                                                    {% set _titleRendered = true %}
-                                                    <br>
-                                                    <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{section.title}}{% if section.range %} ({{section.range|safe}}){% endif %}</a>
-                                                    <br><br>
-                                                    {% endif %}
-
-                                                    <!-- Sub section title -->
-                                                    {% if _updateIndex == 1 and subsection.type != "main" %}
-                                                    <a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}#{{subsection.id}}" class="govuk-link govuk-link--no-visited-state">
-                                                    <span>{{subsection.title}}</span></a>
-                                                    <br><br>
-                                                    {% endif %}
-
-                                                </dt>
-                                                <dd id="{{update.rule}}">
-                                                    {% if update.rule %}<span class="govuk-!-font-weight-bold">{{update.rule|safe}}</span> - {% endif %}
-                                                    {{update.content|safe}}
-                                                </dd>
-                                            {% endfor %}
-                                        {% endfor %}
-                                    {% endif %}
-                                {% endfor %}
-                            </dl>
+                            
                         </div>
                     </div>
                 </div>
