--- a/app/views/8-0/rules-list.html
+++ b/app/views/8-0/rules-list.html
@@ -366,7 +366,7 @@
                   </section>
 
                   <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
-                      Other information
+                      Other documents
                     </h2>
 
                   <section class="attachment embedded" id="attachment_2701269">
@@ -374,7 +374,7 @@
                           <a aria-hidden="true" class="thumbnail" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
                       </div>
                       <div class="attachment-details">
-                        <h2 class="title"><a aria-describedby="attachment-2701269-accessibility-help" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">Updates to the apprenticeship funding rules {{_yearRangeStart}} to {{_yearRangeEnd}}</a></h2>
+                        <h2 class="title"><a aria-describedby="attachment-2701269-accessibility-help" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">Apprenticeship funding and performance management rules {{_yearRangeStart}} to {{_yearRangeEnd}}: summary of changes</a></h2>
                         <p class="metadata">
                             <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">111KB</span>, <span class="page-length">8 pages</span>
                         </p>
