--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -316,7 +316,7 @@
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
                                         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733039/1819_Funding_Rules_Summary_of_Changes_1.0.pdf">
-                                            updates to the apprenticeship funding rules 2018 to 2019 (PDF, 500KB)
+                                            apprenticeship funding rules 2018 to 2019: summary of changes (PDF, 500KB)
                                         </a>
                                     </li>
                                     <li>
@@ -363,7 +363,7 @@
                                 <ul class="govuk-list govuk-list--bullet">
                                         <li>
                                             <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">
-                                                updates to the apprenticeship funding rules 2017 to 2018 (PDF, 640KB)
+                                                apprenticeship funding and performance management rules 2017 to 2018: summary of changes (PDF, 640KB)
                                             </a>
                                         </li>
                                         <li>
