--- a/app/views/8-0/manual-page.html
+++ b/app/views/8-0/manual-page.html
@@ -108,14 +108,24 @@
                 <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
                     <div class="collapsible-subsections">
                         <div class="gem-c-govspeak govuk-govspeak parts-container">
+
                             <h2 id="{{subsection.id}}" class="">
-                                Chapter name with updates
+                                What is an apprenticeship?
                             </h2>
-                            <p>some</p>
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li><span style="font-weight:bold">EP60.2</span> – Clarification: updated to reflect that some apprenticeship standards have multiple pathways.  Where an apprentice changes their pathway there must be evidence that the total amount of time spent on the apprenticeship meeting the minimum duration requirement.
+                                </li>
+                            </ul>
+
                             <h2 id="{{subsection.id}}" class="">
-                                    Chapter name with updates
-                                </h2>
-                                <p>some other</p>
+                                Who can be funded?
+                            </h2>
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li><span style="font-weight:bold">EP131.3</span> – Clarification: Updated to reflect that in the case of redundant apprentices the provider can act as the proxy employer.
+                                </li>
+                            </ul>
+
+
                         </div>
                     </div>
                 </div>
